# pink-voice

./: .env  .env.example  .gitignore  LICENSE  PinkVoice.spec  PinkVoiceWindows.spec  README.md  build.bat  build.sh  dev.sh  install.sh  pyproject.toml  uninstall.sh
src/pink_voice/: __init__.py  __main__.py  config.py  main.py
src/pink_voice/assets/: icon.icns
src/pink_voice/core/: __init__.py  recorder.py  recorder_process.py  transcribe.py
src/pink_voice/daemon/: __init__.py  hotkeys.py  singleton.py
src/pink_voice/hotkeys/: __init__.py  listener.py
src/pink_voice/platform/: __init__.py  clipboard.py  notifications.py  sounds.py
src/pink_voice/services/: __init__.py  recorder.py  transcribe.py
src/pink_voice/ui/: app.py  base.py  headless.py  macos.py
