[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pink-voice"
version = "1.1.0"
description = "Lightweight macOS menu bar client for pink-transcriber voice transcription service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Pink Voice Team"}
]
keywords = ["transcription", "speech-to-text", "macos", "menu-bar", "voice-input"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "sounddevice~=0.5.2",
    "numpy~=1.26.4",
    "scipy~=1.16.2",
    "rumps~=0.4.0",
    "pynput~=1.8.1",
]

[project.urls]
Homepage = "https://github.com/pinkhairedboy/pink-voice"
Repository = "https://github.com/pinkhairedboy/pink-voice"
"Bug Tracker" = "https://github.com/pinkhairedboy/pink-voice/issues"
"pink-transcriber" = "https://github.com/pinkhairedboy/pink-transcriber"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pink_voice = ["assets/*"]

[project.scripts]
pink-voice = "pink_voice.main:main"
